--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ readme = "README.md"
 travis-ci = { repository = "Turbo87/aeroscore-rs", branch = "master" }
 
 [dependencies]
+rayon = "^0.9"
+flat_projection = "^0.1.1"
 
 [dev-dependencies]
-assert_approx_eq = "1.0.0"
-
+assert_approx_eq = "^1.0.0"
+lazy_static = "^1.0.0"
+regex = "^0.1.41"
