--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,10 @@ flat_projection = "^0.1.1"
 
 [dev-dependencies]
 assert_approx_eq = "^1.0.0"
+criterion = "^0.2.0"
 lazy_static = "^1.0.0"
 regex = "^0.1.41"
+
+[[bench]]
+name = "olc_classic"
+harness = false
