--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ flat_projection = "^0.1.1"
 assert_approx_eq = "^1.0.0"
 criterion = "^0.2.0"
 igc = { path = "igc" }
+serde_json = "^1.0.0"
 
 [[bench]]
 name = "olc_classic"
