--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ travis-ci = { repository = "Turbo87/aeroscore-rs", branch = "master" }
 [dependencies]
 failure = "^0.1.1"
 flat_projection = "^0.1.1"
+ord_subset = "^3.1.0"
 rayon = "^0.9"
 
 [dev-dependencies]
