--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,15 @@ travis-ci = { repository = "Turbo87/aeroscore-rs", branch = "master" }
 
 [workspace]
 
+[features]
+default = ["parallel"]
+parallel = ["rayon"]
+
 [dependencies]
 failure = "^0.1.1"
 flat_projection = "^0.1.1"
 ord_subset = "^3.1.0"
-rayon = "^0.9"
+rayon = { version = "^0.9", optional = true }
 
 [dev-dependencies]
 assert_approx_eq = "^1.0.0"
