--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,10 @@ matrix:
     - rust: nightly
 
 cache: cargo
+
+install: skip
+
+script:
+  - cargo build --all
+  - cargo bench --no-run
+  - cargo test --all
