--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ rayon = { version = "^1.0", optional = true }
 [dev-dependencies]
 assert_approx_eq = "^1.0.0"
 criterion = "^0.3.0"
-igc = { git = "https://github.com/Joey9801/igc-rs" }
+igc = "0.2.2"
 serde_json = "^1.0.0"
 
 [[bench]]
